* Removed and banned cglib dependency. * Removed illegal-access=permit from javac-release profile. * CI is updated to use JDK 11 by default and enabled JDK 17. * Updated actions/setup-java version.